[package]
name = "load-balancer"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.5.4"
tokio = { version = "1.37.0", features = ["full"] }

[[bin]]
name = "loadbalancer"
path = "src/main.rs"
